updates doc pages

--- a/website/docs/components/button.mdx
+++ b/website/docs/components/button.mdx
@@ -1,6 +1,8 @@
 ---
 title: Button
+description: Usage of the button component
 sidebar_position: 1
+tags: [components, button]
 ---
 
 # CustomButton
@@ -53,9 +55,9 @@ Below is a list of available button configurations.
 </div>
 
 ### disabled button
-<div className={'showcase'}>
+<div className={'showcase bottom-m'}>
   <CustomButton label={'disabled'} theme={'error'} disabled={true}/>
-  <CustomButton label={'disabled small'} theme={'#0047CC'} disabled={true}/>
+  <CustomButton label={'disabled small'} theme={'#0047CC'} disabled={true} small={true}/>
 </div>
 
 :::info[Disabling a button]
