--- a/website/docs/getting-started/install.mdx
+++ b/website/docs/getting-started/install.mdx
@@ -1,6 +1,17 @@
 ---
 title: Install
+description: How to install the package
 sidebar_position: 1
 ---
 
 # Installing the package
+
+Install via npm:
+
+```npm
+  npm install @hbuesing/ui-library
+```
+
+## Importing the stylesheet
+To be able to use the components properly you have to import a stylesheet.
+
