--- a/website/docs/components/input.mdx
+++ b/website/docs/components/input.mdx
@@ -4,6 +4,7 @@ description: Usage of the input component
 sidebar_position: 2
 tags: [components, input]
 ---
+import { useState } from 'react';
 
 # CustomInput
 Component to render an input field. Below is a list of all required and optional properties.
@@ -28,25 +29,21 @@ Component to render an input field. Below is a list of all required and optional
 Provided icons must be svg files. Can be single svg or sprites file (foo.svg#bar)
 :::
 
-[//]: # (<CustomInput label={'Default input'} value={''} valueChanged={&#40;&#41; => {}}/>)
+## Examples
+
+### Default input
+<CustomInput label={'Default input'} value={''} valueChanged={() => {}}/>
 
 ## Playground
 
 ```tsx live
-
 function Playground() {
-  const [value, setValue] = useState('');
+  const [value, setValue] = useState('Hello!');
 
   return (
-
     <div className={'showcase'}>
-
-      {/*<CustomInput label={'Default input'} value={value} valueChanged={setValue}/>*/}
-
+      <CustomInput label={'Default input'} value={value} valueChanged={setValue}/>
     </div>
-
   );
-
 }
-
 ```
