--- a/website/docs/components/checkbox.mdx
+++ b/website/docs/components/checkbox.mdx
@@ -2,5 +2,5 @@
 title: Checkbox
 description: Usage of the checkbox component
 sidebar_position: 3
-tags: [components]
+tags: [components, checkbox]
 ---
