--- a/website/docs/components/images.mdx
+++ b/website/docs/components/images.mdx
@@ -1,6 +1,6 @@
 ---
 title: Images
 description: Usage of the images components
-sidebar_position: 4
-tags: [components]
+sidebar_position: 5
+tags: [components, images]
 ---
