--- a/website/docs/components/modal.mdx
+++ b/website/docs/components/modal.mdx
@@ -1,6 +1,6 @@
 ---
 title: Modal
 description: Usage of the modal components
-sidebar_position: 5
-tags: [components]
+sidebar_position: 4
+tags: [components, modal]
 ---
