updates input docs

--- a/website/docs/components/input.mdx
+++ b/website/docs/components/input.mdx
@@ -4,8 +4,6 @@ description: Usage of the input component
 sidebar_position: 2
 tags: [components, input]
 ---
-import useBaseUrl from '@docusaurus/useBaseUrl';
-
 
 # CustomInput
 Component to render an input field. Below is a list of all required and optional properties.
@@ -36,19 +34,19 @@ Provided icons must be svg files. Can be single svg or sprites file (foo.svg#bar
 <CustomInput label={'Label'} value={''} valueChanged={() => {}}/>
 
 ### Input with tooltip
+<TooltipInput/>
 
-[//]: # (TODO check image render error)
-<CustomInput label={'Label'} value={''} valueChanged={() => {}} iconSrc={useBaseUrl('/img/example.svg')}/>
+### Input with icon
+<IconInput/>
 
 ## Playground
-
 ```tsx live
 function Playground() {
   const [value, setValue] = useState('Hello!');
 
   return (
     <div className={'showcase'}>
-      <CustomInput label={'Default input'} value={value} valueChanged={setValue}/>
+      <CustomInput label={'Default Input'} value={value} valueChanged={setValue}/>
     </div>
   );
 }
