--- a/website/docs/components/button.mdx
+++ b/website/docs/components/button.mdx
@@ -48,10 +48,10 @@ Below is a list of available button configurations.
 ### Custom theme
 <div className={'showcase'}>
   <CustomButton label={'#2ce8b8'} theme={'#2ce8b8'}/>
-  <CustomButton label={'#2ce8b8 small'} theme={'#2ce8b8'} small={true}/>
+  <CustomButton label={'small'} theme={'#2ce8b8'} small={true}/>
   <CustomButton label={'#9900cc'} theme={'#9900cc'}/>
   <CustomButton label={'#0047CC'} theme={'#0047CC'}/>
-  <CustomButton label={'#0047CC small'} theme={'#0047CC'} small={true}/>
+  <CustomButton label={'small'} theme={'#0047CC'} small={true}/>
 </div>
 
 ### disabled button
