--- a/website/docs/components/images.mdx
+++ b/website/docs/components/images.mdx
@@ -1,6 +1,10 @@
 ---
 title: Images
 description: Usage of the images components
-sidebar_position: 5
+sidebar_position: 6
 tags: [components, images]
 ---
+
+# Images
+
+WIP docs will be added at a later date
