--- a/website/docs/components/checkbox.mdx
+++ b/website/docs/components/checkbox.mdx
@@ -1,6 +1,10 @@
 ---
 title: Checkbox
 description: Usage of the checkbox component
-sidebar_position: 3
+sidebar_position: 4
 tags: [components, checkbox]
 ---
+
+# Checkbox
+
+WIP docs will be added at a later date
