--- a/website/docs/components/modal.mdx
+++ b/website/docs/components/modal.mdx
@@ -1,6 +1,11 @@
 ---
 title: Modal
 description: Usage of the modal components
-sidebar_position: 4
+sidebar_position: 5
 tags: [components, modal]
 ---
+
+
+# Modal
+
+WIP docs will be added at a later date
