*restructures getting-started page

--- a/website/docs/gettingStarted.mdx
+++ b/website/docs/gettingStarted.mdx
@@ -1,12 +1,13 @@
 ---
-title: Install
+title: Getting-started
 description: How to install the package
 sidebar_position: 1
 tags: [getting-started]
 ---
 
-# Installing the package
+# Getting-started
 
+## Installation
 Install via npm:
 
 ```npm
