Revert "*restructures getting-started page"
This reverts commit 256d180309ec29fa9d9c06fc2be8de4d929bf775.

--- a/website/docs/getting-started/install.mdx
+++ b/website/docs/getting-started/install.mdx
@@ -1,13 +1,12 @@
 ---
-title: Getting-started
+title: Install
 description: How to install the package
 sidebar_position: 1
 tags: [getting-started]
 ---
 
-# Getting-started
+# Installing the package
 
-## Installation
 Install via npm:
 
 ```npm
