*restructures the getting-started doc

--- a/website/docs/getting-started.mdx
+++ b/website/docs/getting-started.mdx
@@ -1,6 +1,6 @@
 ---
-title: Install
-description: How to install the package
+title: Getting started
+description: Getting started with the library
 sidebar_position: 1
 tags: [getting-started]
 ---
