--- a/website/docs/components/passwordInput.mdx
+++ b/website/docs/components/passwordInput.mdx
@@ -1,10 +1,34 @@
 ---
-title: Password input
+title: <Password input />
 description: Usage of the passwordInput component
 sidebar_position: 3
 tags: [components, input]
 ---
 
-# Password verification input
+# \<PasswordInput />
 
-WIP docs will be added at a later date
+## Assignable props
+<AssignableProps
+  data={[
+    {name: 'label', value: 'string', required: true, definition: 'Label for the input'},
+    {name: 'value', value: 'string', required: true, definition: 'Current value'},
+    {name: 'valueChanged', value: '(value: string) => void', required: true, definition: 'Function to get the entered value'},
+    {name: 'iconSrc', value: '.svg file', required: false, definition: 'Display an icon for the input'},
+    {name: 'iconColor', value: 'string', required: false, definition: 'Set the color of the icon'},
+    {name: 'inputColor', value: 'string', required: false, definition: 'Set the color of the entered text'},
+    {name: 'toggle', value: '() => void', required: false, definition: 'Function that runs when clicking on the icon, e.g. toggling between input type password & text'},
+    {name: 'tooltipIcon', value: '.svg file', required: false, definition: 'Display a tooltip icon'},
+    {name: 'tooltipText', value: 'string', required: false, definition: 'Tooltip text'},
+    {name: 'tooltipClose', value: 'string', required: false, definition: 'Tooltip close label'},
+    {name: 'HTML input props', value: '', required: false, definition: 'HTML input attributes, e.g. "name"'},
+  ]}
+/>
+
+capsLockWarning: string;
+setFailedRules : (value: PasswordRule[]) => void;
+ruleChecked    : string;
+rules          : PasswordRule[];
+ruleUnchecked  : string;
+
+
+<PasswordExample/>
