*fixes typo for button doc

--- a/website/docs/components/button.mdx
+++ b/website/docs/components/button.mdx
@@ -81,7 +81,7 @@ Not providing a theme will generate the default styled button.
 <CustomButton label={'small'} theme={'#0047CC'} small={true}/>
 ```
 
-### disabled button
+### Disabled button
 <div className={'showcase bottom-m'}>
   <CustomButton label={'disabled'} theme={'error'} disabled={true}/>
   <CustomButton label={'small'} theme={'#0047CC'} disabled={true} small={true}/>
